--- a/style.css
+++ b/style.css
@@ -155,10 +155,33 @@ body{
 	background-image: url("https://www.transparenttextures.com/patterns/subtle-white-feathers.png");
 }
 
-@media all and(max-width: 1020px) {
-	#entete{
-	
-		
+@media all and (max-width: 1020px) {
+	#footer{
+		display: flex;
+		flex-flow: column;
+		justify-content: space-around;
+		border-top: 1px solid;
+		margin-top: 5%;
+		padding: 0.5%;
 	}
-	
+	iframe{
+		width: 50%;
+	}
+	#forme{
+		border: 1px solid black;
+		background-color: #F2F2F2;
+		padding: 1%;
+		margin-left: 7%;
+		width: 93vw;
+		height: 73vw;
+	}
+	#resume{
+		margin-right: 40%;
+		margin-top: 13%;
+		text-align: justify;
+		display: flex;
+	}
+	.imageE{
+		margin-top: 1%;
+	}
 }
